--- a/Fashion_MNIST_TPU.ipynb
+++ b/Fashion_MNIST_TPU.ipynb
@@ -45,11 +45,22 @@
         "t_euFo7jyT5p",
         "-x8QW3obZOVI"
       ],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "accelerator": "TPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/khuongav/FashionMNIST_Ensembling_OctaveCNN-TPU/blob/master/Fashion_MNIST_TPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
