--- a/Fashion_MNIST_TPU.ipynb
+++ b/Fashion_MNIST_TPU.ipynb
@@ -58,7 +58,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/khuongav/FashionMNIST_Ensembling_OctaveCNN-TPU/blob/master/Fashion_MNIST_TPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/khuongav/fashion-mnist-tpu/blob/master/Fashion_MNIST_TPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -80,7 +80,7 @@
       "source": [
         "author: **Khuong Vo**\n",
         "\n",
-        "Building a convolutional neural network that learns to predict one of the 10 classes of the Fashion-MNIST dataset which comprises grayscale images of 10 different classes of clothes. https://www.tensorflow.org/tutorials/keras/basic_classification\n",
+        "Building a convolutional neural network that learns to predict one of the 10 classes of the Fashion-MNIST dataset which comprises grayscale images of 10 different classes of clothes. \n",
         "\n",
         "This notebook is based on the **fast.ai** course v1\n",
         "\n",
